Add age to timeline on sections

--- a/static/style.css
+++ b/static/style.css
@@ -1712,6 +1712,12 @@ a:hover {
     margin-top: 0;
 }
 
+.timeline-age {
+    font-family: inherit;
+    font-size: 8px;
+    color: #666;
+}
+
 .timeline-event {
     padding: 0.25rem 0;
     padding-left: 1rem;
